Markdown description, icon grid, fix overflow

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,13 +12,17 @@ html, body {
 }
 
 .item {
-  @apply w-full aspect-[7/2] sm:aspect-[5/3] sm:h-[14rem] md:h-[16rem] relative pointer-events-auto cursor-pointer overflow-hidden transition-all rounded;
+  @apply w-full aspect-[7/2] lg:aspect-[5/3] sm:h-[14rem] md:h-[16rem] relative pointer-events-auto cursor-pointer overflow-hidden transition-all rounded;
   > img {
     @apply rounded transition-all;
   }
 
   .elements {
     @apply hidden transition-all delay-100;
+    > * {
+      z-index: 30;
+      min-height: 0;
+    }
   }
 
   &:hover, &.active {
@@ -43,5 +47,16 @@ html, body {
       @apply text-black bg-white;
       transition-delay: 0s;
     }
+  }
+}
+
+.icon-grid {
+  direction: rtl;
+  grid-auto-flow: column;
+
+  > svg {
+    width: 75%;
+    height: 75%;
+    @apply transition-transform drop-shadow-md hover:scale-[120%] text-zinc-200 hover:text-zinc-50 m-auto aspect-square;
   }
 }
